create update delete table

--- a/src/app/hr/designation/designation.component.html
+++ b/src/app/hr/designation/designation.component.html
@@ -1,14 +1,65 @@
-<h1>Designation Form</h1>
+<!--Form-->
+<div class="div-section">
 
-<form [formGroup]="designationForm" (ngSubmit)="onSave()">
-    <mat-form-field >
-        <mat-label>ID</mat-label>
-        <input formControlName="id" matInput>
-    </mat-form-field>
-    <mat-form-field >
-        <mat-label>Designation</mat-label>
-        <input formControlName="name" matInput>
-    </mat-form-field>
-    <mat-checkbox formControlName="active">Active</mat-checkbox>
-    <button type="submit" [disabled]="!designationForm.valid">Submit</button>
-</form>
+    <h1>Designation Form</h1>
+    <form [formGroup]="designationForm" (ngSubmit)="onSubmit()">
+        <mat-form-field>
+            <mat-label>ID</mat-label>
+            <input formControlName="id" matInput readonly>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Designation</mat-label>
+            <input formControlName="name" matInput>
+        </mat-form-field>
+        <mat-checkbox formControlName="active">Active</mat-checkbox><br/>
+        <button type="button" (click)="onClear()" mat-stroked-button color="accent">Clear</button>
+        <button type="submit" [disabled]="!designationForm.valid" mat-raised-button color="primary">Submit</button>
+    </form>
+
+</div>
+
+<!--Table-->
+<div class="div-section">
+
+    <h1>Designation List</h1>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <!-- id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Name </th>
+            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        </ng-container>
+    
+        <!-- Active Column -->
+        <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> Active </th>
+            <td mat-cell *matCellDef="let row"> {{row.active}} </td>
+        </ng-container>
+    
+        <!-- Action Column -->
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let row">
+
+                <button (click)="onEdit(row)" mat-fab color="accent" aria-label="Example icon button with a edit icon">
+                    <mat-icon>edit</mat-icon>
+                </button>
+
+                <button (click)="onDelete(row)" mat-fab color="warn" aria-label="Example icon button with a delete icon">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+    
+        <!-- Define display cloumn -->
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+</div>
