--- a/src/app/hr/designation/designation.component.html
+++ b/src/app/hr/designation/designation.component.html
@@ -1,8 +1,16 @@
+<div *ngIf="message">
+    <p>
+        <ngb-alert [dismissible]="false">
+            <strong>{{message}}</strong>
+        </ngb-alert>
+    </p>
+</div>
+
 <!--Form-->
 <div class="div-section">
 
     <h1>Designation Form</h1>
-    <form [formGroup]="designationForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="designationForm" (ngSubmit)="submit()">
         <mat-form-field>
             <mat-label>ID</mat-label>
             <input formControlName="id" matInput readonly>
@@ -12,7 +20,7 @@
             <input formControlName="name" matInput>
         </mat-form-field>
         <mat-checkbox formControlName="active">Active</mat-checkbox><br/>
-        <button type="button" (click)="onClear()" mat-stroked-button color="accent">Clear</button>
+        <button type="button" (click)="clear()" mat-stroked-button color="accent">Clear</button>
         <button type="submit" [disabled]="!designationForm.valid" mat-raised-button color="primary">Submit</button>
     </form>
 
@@ -47,11 +55,11 @@
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let row">
 
-                <button (click)="onEdit(row)" mat-fab color="accent" aria-label="Example icon button with a edit icon">
+                <button (click)="edit(row)" mat-fab color="accent" aria-label="Example icon button with a edit icon">
                     <mat-icon>edit</mat-icon>
                 </button>
 
-                <button (click)="onDelete(row)" mat-fab color="warn" aria-label="Example icon button with a delete icon">
+                <button (click)="delete(row)" mat-fab color="warn" aria-label="Example icon button with a delete icon">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
